--- a/css/stylin.css
+++ b/css/stylin.css
@@ -306,7 +306,8 @@ a, a:active, a:visited {
 
 .portfolio-image {
     opacity: 1;
-    width: 3    50px;
+    min-width: 250px;
+    max-width: 300px;
     height: 250px;
 }
 .portfolio-image:hover {
@@ -348,16 +349,17 @@ hr.faded-hr-lt-blue {
 }
 
 input {
-    width: 375px;
+    max-width: 300px;
+    min-width: 100%;
     height: 25px;
 }
-
 .btn-temp {
     color: #fff;
     background-image: linear-gradient(to bottom, #052049 0, #058488 100%);
     background-repeat: repeat-x;
     border: 2px solid #007cbe;
-    padding: 1px 12px !important;
+    padding: 1px 5px !important;
+    max-width: 100%;
 }
 
 .btn-temp:hover {
